fixed mini device header spacing

--- a/static/css/basic.less
+++ b/static/css/basic.less
@@ -22,7 +22,7 @@
 @tiny-font: 1.25em;
 
 @title-height-for-desktop-tablet-and-mobile: 120px;
-@title-height-for-mini-mobile: 100px;
+@title-height-for-mini-mobile: 80px;
 
 @back-height-for-desktop-and-tablets: 120px;
 @back-height-for-mobile: 80px;
